# monorepo

./: .bash_aliases  .bashrc  .clinerules  .coverage  .dockerignore  .env  .env.deploy  .eslintrc.json  .flake8  .gitignore  .graphqlrc.yml  .nxignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yarnrc.yml  Dockerfile  LICENSE  Makefile  README.md  app.json  babel.config.json  codegen.ts  docker-compose-ci.yml  docker-compose.yml  eas.json  eslint.config.mjs  jest-svg-mock.js  last_commit.patch  migrations.json  mypy.ini  note.md  nx.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  storybook-migration-summary.md  tsconfig.base.json  (+2 more)
.aws/: config
.claude/: settings.local.json
.compose/: local.shared.env
.devcontainer/: devcontainer.json  docker-compose.yml
.eas/workflows/: e2e-test.yml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: android_e2e_test.yml  default.yml  e2e-test-android.yml  e2e-test.yml  e2e.yml  eas-branch-cleanup.yml  eas-post-e2e.yml  eas.yml  eslint.yml  maestro-e2e.yml
.maestro/: landing.yml
.maestro/android/: landing.yml
.maestro/flows/: landing.yml
.maestro/ios/: landing.yml
.yarn/patches/: @apollo-client-npm-3.10.3-793436d507.patch  expo-modules-core-npm-2.3.13-79c161064c.patch  react-native-pdf-npm-6.7.7-7aa1e3a631.patch
application/: .gitignore  nx.json  package.json
apps/: betterang
apps/atlantis/: .env  Dockerfile  project.json
apps/betterangels/: .easignore  .env  .env.local.sample  .eslintrc.json  .yarnrc.yml  apollo.ts  app.config.js  app.json  babel.config.js  config.ts  eas-build-pre-install.js  eas.json  env-config.js  eslint.config.mjs  index.js  index.ts  jest.config.ts  metro.config.js  package-lock.json  package.json  prod.env  project.json  test-setup.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.json
apps/betterangels-admin/: .env  .env.build.preview  .env.build.production  .env.deploy.preview  .env.deploy.production  .env.sample  config.ts  index.html  jest.config.ts  package.json  postcss.config.ts  project.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.spec.json  vite.config.mts  vite.config.ts
apps/betterangels-admin-e2e/: playwright.config.ts  project.json
apps/betterangels-backend/: .dockerignore  .env  .env.build  .env.ci  .env.deploy  .env.django  .env.local.sample  .gitignore  Dockerfile  README.md  conftest.py  import-log.txt  manage.py  package-lock.json  package.json  project.json  pyproject.toml  schema.graphql
apps/betterangels-e2e/: .detoxrc.json  project.json
apps/imgproxy/: .env  .env.deploy  .env.deploy.preview  .env.deploy.production  Dockerfile  project.json
apps/nginx/: .env  .env.deploy  Dockerfile  project.json
apps/outreach/: .env  .eslintrc.json  app.json  config.ts  eas.json  jest.config.ts  metro.config.js  package.json  project.json
apps/outreach-e2e/: project.json
apps/shelter/: app.json  index.js  (+3 more)
apps/shelter-e2e/: cypress.config.ts  project.json
apps/shelter-operator/: CreateShelterForm.test.tsx  CreateShelterForm.tsx  Dashboard.tsx  ShelterCard.tsx  ShelterRow.tsx  appRoutes.tsx  types.ts
apps/shelter-operator2/: Dashboard.tsx  ShelterRow.tsx
apps/shelter-web/: .env.build.preview  .env.build.production  .env.deploy.preview  .env.deploy.production  .env.sample  README.md  build.development.env  build.production.env  index.html  jest.config.ts  package.json  postcss.config.js  project.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.mts
betterangels-admin/: .eslintrc.json  jest.config.ts  project.json  tsconfig.app.json  tsconfig.spec.json  vite.config.ts
betterangels-admin-e2e/: project.json
docs/: ai-instructions.md  attribution_guidelines.md  backend_readme.md  client-merge-design.md  cline.md  cline_mcp_settings.example.json  cline_remote_browser.md  cline_setup.md  dev_container_ssh.md  devcontainer.md  development_workflow.md  engineering-roadmap-executive.html  engineering-roadmap-executive.md  engineering-roadmap-jul-oct-2026.md  frontend_readme.md  frontend_vite_apps.md  icontains-optimizations.md  presigned-upload-pipeline.md  python_services_selectors.md  tooling.md
handbook/: README.md
ios/: Podfile
logs/: .2ce9f11eb5947d939ca75b6ba3d8c8c15b5ee99d-audit.json
tailwind/: .eslintrc.json  base.css  fonts-rn.css  fonts.css  project.json  tailwind.base.config.ts  tailwind.theme.ts
tools/: .eslintrc.json  tsconfig.tools.json
typings/: eslint-env.d.ts
(+6730 files in other folders)
