[tool.nx]
autoActivate = true

[tool.poetry]
name = "@monorepo/source"
version = "1.0.0"
description = ""
authors = []
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120
exclude = '''
/(
    | node_modules
    | .venv/lib
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/migrations/*"]

[tool.poetry.dependencies]
python = "3.14.2"

[tool.poetry.dependencies.betterangels-backend]
path = "apps/betterangels-backend"
develop = true


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^7.0.0"
black = "^25.12.0"
flake8-bugbear = "^25.11.29"
django-stubs-ext = "5.2.8"
djlint = "^1.36.4"
django-stubs = { extras = ["compatible-mypy"], version = "5.2.8" }
celery-types = "^0.24.0"
vcrpy = "^8.1.0"
djangorestframework-stubs = { extras = [
    "compatible-mypy",
], version = "^3.16.6" }
ipython = "^9.9.0"
pytest-django = "^4.11.1"
boto3-stubs = { extras = ["essential"], version = "^1.42.25" }
model-bakery = "^1.23.0"
unittest-parametrize = "^1.6.0"
time-machine = "^3.2.0"
types-python-dateutil = "^2.9.0.20250708"
types-gevent = "^25.4.0.20250801"
pre-commit = "^4.3.1"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "betterangels_backend.settings"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
